modules/gdscript/tests/scripts/analyzer/errors/separated_getter_no_return.gd
var x:
	get = get_prop

func get_prop():
	pass

func test():
	pass
